tests/syntax_error/overlong_char.jou
def main() -> int:
    return 'hi'  # Error: single quotes are for a single character, maybe use double quotes to instead make a string?
